# StarLine_Hackathon

./: README.md
Code/: ObstacleAvoidance.py
catkin_ws/devel/: .catkin  local_setup.sh
catkin_ws/src/starbot_simulator/starbot_description/: .cproject  .project  CHANGELOG.rst  CMakeLists.txt  package.xml
catkin_ws/src/starbot_simulator/starbot_description/robots/: create_circles_asus_xtion_pro.urdf.xacro  kobuki_hexagons_astra.urdf.xacro  kobuki_hexagons_asus_xtion_pro.urdf.xacro  kobuki_hexagons_asus_xtion_pro_offset.urdf.xacro  kobuki_hexagons_kinect.urdf.xacro  kobuki_hexagons_r200.urdf.xacro  roomba_circles_kinect.urdf.xacro
catkin_ws/src/starbot_simulator/starbot_description/urdf/: starbot_common_library.urdf.xacro  starbot_gazebo.urdf.xacro
catkin_ws/src/starbot_simulator/starbot_gazebo/: .cproject  .project  CMakeLists.txt  package.xml
catkin_ws/src/starbot_simulator/starbot_gazebo/env-hooks/: 25.starbot-gazebo.sh.em
catkin_ws/src/starbot_simulator/starbot_gazebo/launch/: amcl_demo.launch  gmapping_demo.launch  starbot_robot_test.launch  starbot_world_test.launch  turtlebot_world.launch
catkin_ws/src/starbot_simulator/starbot_gazebo/launch/includes/: roomba.launch.xml
catkin_ws/src/starbot_simulator/starbot_simulator/: .cproject  .project  CHANGELOG.rst  CMakeLists.txt  package.xml
catkin_ws/src/starbot_simulator/starbot_stage/: .cproject  .project  CHANGELOG.rst
catkin_ws/src/starbot_simulator/starbot_stage/launch/: turtlebot_in_stage.launch
catkin_ws/src/starbot_simulator/starbot_stdr/: .cproject  .project  CHANGELOG.rst  package.xml
catkin_ws/src/starbot_simulator/starbot_stdr/env-hooks/: 25.turtlebot-stdr.sh.em
catkin_ws/src/starbot_simulator_OLDDDDD/starbot_description/: test.launch
catkin_ws/src/starbot_simulator_OLDDDDD/starbot_gazebo/: CHANGELOG.rst
catkin_ws/src/starbot_simulator_OLDDDDD/starbot_stage/: CMakeLists.txt  package.xml
catkin_ws/src/starbot_simulator_OLDDDDD/starbot_stage/env-hooks/: 25.turtlebot-stage.sh.em
catkin_ws/src/starbot_simulator_OLDDDDD/starbot_stdr/: CMakeLists.txt
catkin_ws/src/turtlecity_gazebo/: CMakeLists.txt  package.xml
catkin_ws/src/turtlecity_gazebo/launch/: turtlebot_world.launch
commands/: gitup.sh
docs/: Setup.md  test.md
docs/setup/: linux_ROS_env.md  turtlebot2.md  turtlebot3.md
environment/Typora - Markdown Editor/: setup.sh
(+11 files in other folders)
