<package>
  <name>starbot_simulator</name>
  <version>2.2.3</version>
  <description>Catkin metapackage for the starbot_simulator stack</description>
  <maintainer email="turtlebot@osrfoundation.com">OSRF</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/starbot_simulator</url>
  <url type="repository">https://github.com/turtlebot/starbot_simulator</url>
  <url type="bugtracker">https://github.com/turtlebot/starbot_simulator/issues</url>
  <author email="turtlebot@willowgarage.com">Willow</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>starbot_gazebo</run_depend>
  <run_depend>starbot_stage</run_depend>
  <run_depend>starbot_stdr</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
