<?xml version="1.0"?>
<package>
  <name>starbot_stage</name>
  <version>2.2.3</version>
  <description>
    Stage version of turtlebot simulation. Convenient to test 2D-navigation related stuffs
  </description>

  <maintainer email="jihoonl@yujinrobot.com">Jihoon Lee</maintainer>
  <author email="jorge@yujinrobot.com">Jorge Santos</author>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/starbot_stage</url>
  <url type="repository">https://github.com/turtlebot/starbot_simulator</url>
  <url type="bugtracker">https://github.com/turtlebot/starbot_simulator/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>stage_ros</run_depend>
  <run_depend>navigation</run_depend>
  <run_depend>turtlebot_bringup</run_depend>
  <run_depend>turtlebot_navigation</run_depend>
  <run_depend>yocs_virtual_sensor</run_depend>
  <run_depend>yocs_velocity_smoother</run_depend>
</package>
